fix: minor bugs on pop crashes

--- a/looking-glass.html
+++ b/looking-glass.html
@@ -161,7 +161,7 @@
                                         </svg>
                                     </div>
                                     <div class="p-2">
-                                        <span class="text-monospace-lg">ping [ip|domain]</span>
+                                        <span class="text-monospace-lg">ping (ip|domain)</span>
                                         <br>
                                         <span style="font-size: 9pt;">
                                             measure the round-trip time for messages sent from source to destination.
@@ -175,7 +175,7 @@
                                         </svg>
                                     </div>
                                     <div class="p-2">
-                                        <span class="text-monospace-lg">traceroute [ip|domain]</span>
+                                        <span class="text-monospace-lg">traceroute (ip|domain)</span>
                                         <br>
                                         <span style="font-size: 9pt;">
                                             trace and diagnose the pathway from source to destination. used for debugging routes.
@@ -203,7 +203,7 @@
                                         </svg>
                                     </div>
                                     <div class="p-2">
-                                        <span class="text-monospace-lg">bgp route [ip]</span>
+                                        <span class="text-monospace-lg">bgp route (ip)</span>
                                         <br>
                                         <span style="font-size: 9pt;">
                                             show BGP routing information on a given ip address.
