--- a/services.html
+++ b/services.html
@@ -124,53 +124,57 @@
                         </div>
                     </div>
                     <div class="row pt-3">
-                        <div class="col-md-12 col-lg-4">
-                            <div class="card bg-body rounded-0 shadow-sm mb-4">
-                                <div class="card-header py-3">
-                                    <h4 class="my-0 fw-normal">Global CDN</h4>
-                                </div>
-                                    <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
-                                    <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Providing unlimited 1Gbps CDN</li>
-                                        <li>Exclusively available for business customers</li>
-                                        <li> &nbsp;</li>
-                                    </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0 disabled" onclick="location.href='mailto:server%2blease&#64;stypr.com';">
-                                        Contact Operator
-                                    </button>
+                        <div class="col-md-12 col-lg-12">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4"  style="z-index:2 !important; overflow:hidden;">
+                                <div class="card-body">
+                                    <h1 class="lh-1">WireGuard VPN</h1>
+                                    <span class="text-muted lh-0">&nbsp;Providing Secure worldwide IPv6 network</span>
+                                    <img class="position-absolute logo-wireguard" src="/static/images/wireguard.svg" width="400">
+                                    <div class="text-end mt-5">
+                                        <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
+                                        <ul class="list-unstyled mt-3 mb-4">
+                                            <li>1Gbps &middot; Fair Use Policy</li>
+                                            <li>Best-effort support</li>
+                                        </ul>
+                                        <button type="button" class="btn btn-lg btn-primary rounded-0 disabled">Request Access</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-4">
-                            <div class="card bg-body rounded-0 shadow-sm mb-4">
-                                <div class="card-header py-3">
-                                    <h4 class="my-0 fw-normal">Dedicated Server</h4>
-                                </div>
+                        <div class="col-md-12 col-lg-12">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4"  style="z-index:1 !important; overflow:hidden;">
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$60<small class="text-muted fw-light">/mo</small></h1>
-                                    <ul class="list-unstyled mt-3 mb-4">
-                                        <li>8GB RAM &middot; i8700T</li>
-                                        <li>1Gbps &middot; Fair Use Policy</li>
-                                        <li>Best-effort support</li>
-                                    </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-0 disabled">Out of Stock</button>
+                                    <div style="z-index: 999999999999 !important">
+                                        <h1 class="lh-1">Global CDN</h1>
+                                        <span class="lh-0">&nbsp;Providing Anycasted Content Delivery Network</span>
+                                    </div>
+                                    <img class="position-absolute logo-cdn" src="/static/images/cdn.svg" width="400">
+                                    <div class="text-end mt-5">
+                                        <h1 class="card-title pricing-card-title">$20<small class="text-muted fw-light">/mo ~</small></h1>
+                                        <ul class="list-unstyled mt-3 mb-4">
+                                            <li>Providing unlimited 1Gbps~ CDN</li>
+                                            <li>Exclusively for business customers</li>
+                                        </ul>
+                                        <button type="button" class="btn btn-lg btn-primary-outline rounded-0 disabled">Contact Operator</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-4">
-                            <div class="card bg-body rounded-0 shadow-sm mb-4">
-                                <div class="card-header py-3 border-primary2 text-bg-primary2 rounded-0">
-                                    <h4 class="my-0 fw-normal">WireGuard VPN</h4>
-                                </div>
+
+                        <div class="col-md-12 col-lg-12">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4"  style="z-index:1 !important; overflow:hidden;">
                                 <div class="card-body">
-                                    <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
-                                    <ul class="list-unstyled mt-3 mb-4">
-                                        <li>Providing IPv6 VPN network</li>
-                                        <li>1Gbps &middot; Fair Use Policy</li>
-                                        <li>Best-effort support</li>
-                                    </ul>
-                                    <button type="button" class="w-100 btn btn-lg btn-primary rounded-0 disabled">Request Access</button>
+                                    <h1 class="lh-1">Dedicated Server</h1>
+                                    <span class="lh-0">&nbsp;Providing High-end servers with unlimited traffics</span>
+                                    <img class="position-absolute logo-dedicated" src="/static/images/dedicated.svg" width="700">
+                                    <div class="text-end mt-5">
+                                        <h1 class="card-title pricing-card-title">$80<small class="text-muted fw-light">/mo</small></h1>
+                                        <ul class="list-unstyled mt-3 mb-4">
+                                            <li>Providing unlimited traffic in South Korea</li>
+                                            <li>8GB RAM &middot; 400GB HDD &middot; i12700T</li>
+                                        </ul>
+                                        <button type="button" class="btn btn-lg btn-primary-outline rounded-0 disabled">Out of Stock</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
