feat(dashboard): implement graphviz diagrams with images

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -118,14 +118,10 @@
         <div class="container">
 
             <div class="" id="page-about">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <div class="mb-10">
-                        <h1 class="h2">About Network</h1>
-                    </div>
-                </div>
-                <div class="row">
+                <div class="row mt-2">
                     <div class="col-lg-8">
-                        <div class="my-3 mb-1 px-4 py-2 bg-body shadow-sm">
+                        <div class="my-3 mb-1 px-4 p-3 bg-body shadow-sm">
+                            <h4>About</h4>
                             <br>
                             <h6>
                                 AS400671 (part of AS-STYPR) is a multi-purpose Internet Service Provider(ISP) that provides secure service operation, security research, and automated network management. There are plans to extend the network for anycast DNS and CDN support in the upcoming years.<br><br>
@@ -153,7 +149,7 @@
 
                                 Not following conditions are subject to termination without any prior notice.<br>
                                 Don't hesitate to get in touch with <a href="#">serv<span class="d-none">digial-server</span>er+peering&#64;s<span class="d-none">sty</span>typr.com</a> (<a href="//harold.kim/pubkey.asc">PGP</a>) for any inquiries regarding the peering policy.
-                                <br><br>
+                                <br>
                             </h6>
                         </div>
                     </div>
@@ -185,13 +181,17 @@
                             </h6>
                         </div>
                         <div class="my-3 p-3 bg-body shadow-sm">
-                            <h4>Links</h4>
+                            <h4>Reference</h4>
                             <br>
                             <h6>
                                 <ul>
                                     <li class="pb-3">
                                         <b>PeeringDB</b><br>
                                         <a href="https://www.peeringdb.com/net/29832">//www.peeringdb.com/net/29832</a>
+                                    </li>
+                                    <li>
+                                        <b>BGP.tools</b><br>
+                                        <a href="https://bgp.tools/as/400671">//bgp.tools/as/400671</a><br><br>
                                     </li>
                                     <li>
                                         <b>KNOC</b><br>
@@ -247,7 +247,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208090020"></script>
+    <script src="/static/javascript/init.js?2208091946"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
