--- a/looking-glass.html
+++ b/looking-glass.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -135,8 +135,8 @@
         <div class="container">
             <div class="align-items-center my-5" id="search-bar">
                 <div class="row d-flex justify-content-center">
-                    <div class="col-sm-12 col-md-9 col-xl-8">
-                        <div class="card border-0 rounded-0 p-3 shadow-sm" class="search-container">
+                    <div class="col-sm-12 col-md-12 col-xl-9">
+                        <div class="card border-0 rounded-0 p-3 shadow-sm search-container" style="z-index:2 !important; overflow:hidden;">
                             <div class="search-box">
                                 <form onsubmit="executeCommand(this.search.value); return false;">
                                     <input type="text" name="search" class="form-control text-monospace-default rounded-0" id="search-item" autocomplete="off">
@@ -338,8 +338,8 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208090020"></script>
-    <script src="/static/javascript/looking-glass.js?2208090020"></script>
+    <script src="/static/javascript/init.js?2208091946"></script>
+    <script src="/static/javascript/looking-glass.js?2208091946"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
