--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208090020" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -118,17 +118,12 @@
             <div class="container">
 
                 <div class="" id="page-about">
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                        <div class="mb-10">
-                            <h1 class="h2">Provided Services</h1>
-                        </div>
-                    </div>
-                    <div class="row pt-3">
+                    <div class="row mt-5">
                         <div class="col-md-12 col-lg-12">
                             <div class="card bg-body rounded-0 shadow-sm mb-4"  style="z-index:2 !important; overflow:hidden;">
                                 <div class="card-body">
                                     <h1 class="lh-1">WireGuard VPN</h1>
-                                    <span class="text-muted lh-0">&nbsp;Providing Secure worldwide IPv6 network</span>
+                                    <span class="text-muted lh-0">&nbsp;Providing secure worldwide IPv6 tunneling</span>
                                     <img class="position-absolute logo-wireguard" src="/static/images/wireguard.svg" width="400">
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
@@ -224,7 +219,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208090020"></script>
+    <script src="/static/javascript/init.js?2208091946"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
