design: use flagkit, change colors and pointer-events

--- a/services.html
+++ b/services.html
@@ -15,14 +15,14 @@
     <title>Services | AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
+    <link rel="preload" href="/static/stylesheet/flag.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
+        <link rel="stylesheet" href="/static/stylesheet/flag.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208100458" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -124,7 +124,7 @@
                                 <div class="card-body">
                                     <h1 class="lh-1">WireGuard VPN</h1>
                                     <span class="text-muted lh-0">&nbsp;Providing secure worldwide IPv6 tunneling</span>
-                                    <img class="position-absolute logo-wireguard" src="/static/images/wireguard.svg" width="400">
+                                    <img class="position-absolute logo-wireguard" style="display:none;" src="/static/images/wireguard.svg" width="400">
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
@@ -137,13 +137,13 @@
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-12">
-                            <div class="card bg-body rounded-0 shadow-sm mb-4"  style="z-index:1 !important; overflow:hidden;">
+                            <div class="card bg-body rounded-0 shadow-sm mb-4" style="z-index:1 !important; overflow:hidden;">
                                 <div class="card-body">
                                     <div style="z-index: 999999999999 !important">
                                         <h1 class="lh-1">Global CDN</h1>
                                         <span class="lh-0">&nbsp;Providing Anycasted Content Delivery Network</span>
                                     </div>
-                                    <img class="position-absolute logo-cdn" src="/static/images/cdn.svg" width="400">
+                                    <img class="position-absolute logo-cdn" style="display:none;" src="/static/images/cdn.svg" width="400">
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$20<small class="text-muted fw-light">/mo ~</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
@@ -161,7 +161,7 @@
                                 <div class="card-body">
                                     <h1 class="lh-1">Dedicated Server</h1>
                                     <span class="lh-0">&nbsp;Providing High-end servers with unlimited traffics</span>
-                                    <img class="position-absolute logo-dedicated" src="/static/images/dedicated.svg" width="700">
+                                    <img class="position-absolute logo-dedicated" style="display:none;" src="/static/images/dedicated.svg" width="700">
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$80<small class="text-muted fw-light">/mo</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
@@ -219,7 +219,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208091946"></script>
+    <script src="/static/javascript/init.js?2208100458"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
