--- a/about.html
+++ b/about.html
@@ -15,14 +15,14 @@
     <title>About | AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
+    <link rel="preload" href="/static/stylesheet/flag.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
     <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
+        <link rel="stylesheet" href="/static/stylesheet/flag.css">
     </noscript>
-    <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.css?2208100458" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208100458" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -67,7 +67,7 @@
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 text-white text-decoration-none">
                         <span class="logo">AS400671</span>
                     </a>
-                    <span class="mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
+                    <span class="d-none d-sm-none d-md-none d-lg-block d-xl-block mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
                         <small class="text-monospace">
                         </small>
                         <br>
@@ -85,7 +85,7 @@
                             </a>
                             </a>
                         </li>
-                        <li>
+                        <li class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                             <a href="/looking-glass.html" class="nav-link" id="header-link-lg">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#glass" />
@@ -102,7 +102,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active" id="header-link-about">
+                            <a class="nav-link active" id="header-link-about">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#about" />
                                 </svg>
@@ -247,7 +247,7 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208091946"></script>
+    <script src="/static/javascript/init.js?2208100458"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
