--- a/looking-glass.html
+++ b/looking-glass.html
@@ -21,8 +21,8 @@
     <noscript>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
     </noscript>
-    <link href="/static/stylesheet/bootstrap.css" rel="stylesheet">
-    <link href="/static/stylesheet/bootstrap.stypr.css?2208091946" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.css?2208100458" rel="stylesheet">
+    <link href="/static/stylesheet/bootstrap.stypr.css?2208100458" rel="stylesheet">
 </head>
 
 <body class="bg-light d-flex flex-column h-100">
@@ -84,7 +84,7 @@
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 text-white text-decoration-none">
                         <span class="logo">AS400671</span>
                     </a>
-                    <span class="mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
+                    <span class="d-none d-sm-none d-md-none d-lg-block d-xl-block mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
                         <small class="text-monospace">
                         </small>
                         <br>
@@ -102,8 +102,8 @@
                             </a>
                             </a>
                         </li>
-                        <li>
-                            <a href="#" class="nav-link active" id="header-link-lg">
+                        <li class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
+                            <a class="nav-link active" id="header-link-lg">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#glass" />
                                 </svg>
@@ -232,7 +232,7 @@
 
             <div class="d-none align-items-center my-5" id="page-ping">
                 <div class="row d-flex justify-content-center">
-                    <div class="col-sm-12 col-lg-8 col-xl-8 p-0 shadow-sm">
+                    <div class="col-sm-12 col-lg-12 col-xl-10 p-0 shadow-sm">
                         <table class="table table-hover table-responsive mb-0 bg-body">
                             <thead class="table-dark">
                                 <th>PoP</th>
@@ -338,8 +338,8 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/init.js?2208091946"></script>
-    <script src="/static/javascript/looking-glass.js?2208091946"></script>
+    <script src="/static/javascript/init.js?2208100458"></script>
+    <script src="/static/javascript/looking-glass.js?2208100458"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
