perf: optimize graph load on dashboard, fix layouts

--- a/about.html
+++ b/about.html
@@ -167,7 +167,11 @@
                                         <b>Address</b><br>
                                         stypr LLC<br>
                                         1309 Coffeen Avenue STE 1200<br>
-                                        Sheridan, WY 82801<br><br>
+                                        Sheridan, WY 82801<br>
+                                        <span class="text-monospace text-bg-dark">
+                                            We provide faster responses to e-mails than letters.<br>Please consider contacting us through e-mail addresses.
+                                        </span>
+                                        <br><br>
                                     </li>
                                     <li>
                                         <b>IRR AS-SET</b><br>
