--- a/services.html
+++ b/services.html
@@ -59,15 +59,14 @@
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
             <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
         </symbol>
-    </svg>
-    <header>
+    </svg>    <header>
         <div class="px-3 py-2 text-bg-dark">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a href="/" class="d-flex align-items-center my-2 my-lg-0 text-white text-decoration-none">
                         <span class="logo">AS400671</span>
                     </a>
-                    <span class="mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
+                    <span class="d-none d-sm-none d-md-none d-lg-block d-xl-block mb-3 px-2 mb-md-0 lh-1 me-lg-auto">
                         <small class="text-monospace">
                         </small>
                         <br>
@@ -85,7 +84,7 @@
                             </a>
                             </a>
                         </li>
-                        <li>
+                        <li class="d-none d-sm-block d-md-block d-lg-block d-xl-block">
                             <a href="/looking-glass.html" class="nav-link" id="header-link-lg">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#glass" />
@@ -94,7 +93,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="nav-link active" id="header-link-services">
+                            <a class="nav-link active" id="header-link-services">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#ethernet" />
                                 </svg>
@@ -102,7 +101,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="/about.html" class="nav-link" id="header-link-about">
+                            <a href="about.html" class="nav-link" id="header-link-about">
                                 <svg class="bi d-block mx-auto mb-1" width="24" height="24">
                                     <use xlink:href="#about" />
                                 </svg>
