--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="/static/stylesheet/flag.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/fonts/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/fonts/oxygen.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
         <link rel="stylesheet" href="/static/stylesheet/flag.css">
     </noscript>
@@ -167,11 +167,7 @@
                                         <b>Address</b><br>
                                         stypr LLC<br>
                                         1309 Coffeen Avenue STE 1200<br>
-                                        Sheridan, WY 82801<br>
-                                        <span class="text-monospace text-bg-dark">
-                                            We provide faster responses to e-mails than letters.<br>Please consider contacting us through e-mail addresses.
-                                        </span>
-                                        <br><br>
+                                        Sheridan, WY 82801<br><br>
                                     </li>
                                     <li>
                                         <b>IRR AS-SET</b><br>
@@ -252,9 +248,7 @@
     </footer>
 
     <script src="/static/javascript/init.js?2208100458"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
