--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="google" content="notranslate">
     <meta name="theme-color" content="#f3fff3">
     <meta name="referrer" content="no-referrer">
-    <meta name="description" content="AS400671(AS-STYPR) Dashboard">
-    <meta name="twitter:title" content="AS400671 Dashboard">
+    <meta name="description" content="AS400671 Dashboard">
+    <meta name="twitter:title" content="AS400671">
     <meta property="og:title" content="AS400671 Dashbaord">
     <meta property="og:description" content="AS400671(AS-STYPR) Dashboard">
     <title>AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
     <link rel="preload" href="/static/stylesheet/flag.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/fonts/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/fonts/oxygen.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
         <link rel="stylesheet" href="/static/stylesheet/flag.css">
     </noscript>
@@ -375,15 +375,14 @@
         </div>
     </footer>
 
-    <script src="/static/javascript/viz/viz.js"></script>
-    <script src="/static/javascript/viz/full.render.js"></script>
+    <script src="https://unpkg.com/viz.js@2.1.2/viz.js"></script>
+    <script src="https://unpkg.com/viz.js@2.1.2/lite.render.js"></script>
     <script src="/static/javascript/graph.js?2208100458"></script>
     <script src="/static/javascript/init.js?2208100458"></script>
-    <script src="/static/javascript/dashboard.js?2208100458"></script>
+    <script src="/static/javascript/dashboard.js?2208100458" defer></script>
 
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/chart.js@3.9.1/dist/chart.min.js"></script>
 </body>
 
 </html>
