--- a/looking-glass.html
+++ b/looking-glass.html
@@ -15,11 +15,11 @@
     <title>Looking Glass | AS400671</title>
     <link rel="shortcut icon" href="/static/images/favicon.jpg" type="image/x-icon">
     <link rel="apple-touch-icon" href="/static/images/favicon.jpg">
-    <link rel="preload" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
-    <link rel="preload" href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="https://fonts.gstatic.com/s/oxygenmono/v13/h0GsssGg9FxgDgCjLeAd7hjYx-4.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/stylesheet/flag.css" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin>
+    <link rel="preload" href="/static/fonts/SUIT-Variable.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/static/fonts/oxygen.woff2" as="font" type="font/woff2" crossorigin>
     <noscript>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icon-css@4.1.6/css/flag-icons.min.css">
+        <link rel="stylesheet" href="/static/stylesheet/flag.css">
     </noscript>
     <link href="/static/stylesheet/bootstrap.css?2208100458" rel="stylesheet">
     <link href="/static/stylesheet/bootstrap.stypr.css?2208100458" rel="stylesheet">
@@ -340,9 +340,7 @@
 
     <script src="/static/javascript/init.js?2208100458"></script>
     <script src="/static/javascript/looking-glass.js?2208100458"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js"></script>
+    <script crossorigin="anonymous" src="https://unpkg.com/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
