--- a/services.html
+++ b/services.html
@@ -127,6 +127,7 @@
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$10<small class="text-muted fw-light">/mo</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
+                                            <li>Tor routing support</li>
                                             <li>1Gbps &middot; Fair Use Policy</li>
                                             <li>Best-effort support</li>
                                         </ul>
@@ -144,9 +145,9 @@
                                     </div>
                                     <img class="position-absolute logo-cdn" style="display:none;" src="/static/images/cdn.svg" width="400">
                                     <div class="text-end mt-5">
-                                        <h1 class="card-title pricing-card-title">$20<small class="text-muted fw-light">/mo ~</small></h1>
+                                        <h1 class="card-title pricing-card-title">$40<small class="text-muted fw-light">/mo ~</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
-                                            <li>Providing unlimited 1Gbps~ CDN</li>
+                                            <li>Providing unlimited ~1Gbps CDN</li>
                                             <li>Exclusively for business customers</li>
                                         </ul>
                                         <button type="button" class="btn btn-lg btn-primary-outline rounded-0 disabled">Contact Operator</button>
@@ -164,7 +165,8 @@
                                     <div class="text-end mt-5">
                                         <h1 class="card-title pricing-card-title">$80<small class="text-muted fw-light">/mo</small></h1>
                                         <ul class="list-unstyled mt-3 mb-4">
-                                            <li>Providing unlimited traffic in South Korea</li>
+                                            <li>Providing unlimited traffic</li>
+                                            <li>Available in South Korea &middot; United States</li>
                                             <li>8GB RAM &middot; 400GB HDD &middot; i12700T</li>
                                         </ul>
                                         <button type="button" class="btn btn-lg btn-primary-outline rounded-0 disabled">Out of Stock</button>
@@ -186,7 +188,7 @@
                         <span class="logo-black">AS400671</span>
                     </a>
                     <span class="mb-3 text-muted lh-1 my-3">
-                        &copy; 2022 stypr.
+                        &copy; 2022 stypr LLC
                         <br>
                         <small class="text-monospace">Under MIT License. Respective copyrights apply.</small>
                     </span>
@@ -234,7 +236,7 @@
        \_88P   "88_/   /     888-_88"  888   
                      _/      888             
 
-          Copyright 2022 stypr. ¯\_(ツ)_/¯
+          Copyright 2022 stypr LLC ¯\_(ツ)_/¯
    https://github.com/AS400671/dashboard/LICENSE
 
 -->
