--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <span class="logo-black">AS400671</span>
                     </a>
                     <span class="mb-3 text-muted lh-1 my-3">
-                        &copy; 2022 stypr.
+                        &copy; 2022 stypr LLC
                         <br>
                         <small class="text-monospace">Under MIT License. Respective copyrights apply.</small>
                     </span>
@@ -377,8 +377,8 @@
 
     <script src="https://unpkg.com/viz.js@2.1.2/viz.js"></script>
     <script src="https://unpkg.com/viz.js@2.1.2/lite.render.js"></script>
-    <script src="/static/javascript/graph.js?2208110148"></script>
     <script src="/static/javascript/init.js?2208110148"></script>
+    <script src="/static/javascript/graph.js?2208110148"></script>
     <script src="/static/javascript/dashboard.js?2208110148" defer></script>
 
     <script crossorigin="anonymous" src="https://unpkg.com/bootstrap@5.2.0/dist/js/bootstrap.min.js"></script>
@@ -397,7 +397,7 @@
        \_88P   "88_/   /     888-_88"  888   
                      _/      888             
 
-          Copyright 2022 stypr. ¯\_(ツ)_/¯
+          Copyright 2022 stypr LLC ¯\_(ツ)_/¯
    https://github.com/AS400671/dashboard/LICENSE
 
 -->
