--- a/looking-glass.html
+++ b/looking-glass.html
@@ -306,7 +306,7 @@
                         <span class="logo-black">AS400671</span>
                     </a>
                     <span class="mb-3 text-muted lh-1 my-3">
-                        &copy; 2022 stypr.
+                        &copy; 2022 stypr LLC
                         <br>
                         <small class="text-monospace">Under MIT License. Respective copyrights apply.</small>
                     </span>
@@ -355,7 +355,7 @@
        \_88P   "88_/   /     888-_88"  888   
                      _/      888             
 
-          Copyright 2022 stypr. ¯\_(ツ)_/¯
+          Copyright 2022 stypr LLC ¯\_(ツ)_/¯
    https://github.com/AS400671/dashboard/LICENSE
 
 -->
