--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8, shrink-to-fit=no" />
         <meta name="keywords" content="stypr, AS400671, Harold Kim, harold.kim" />
         <meta name="google" content="notranslate" />
-        <meta name="theme-color" content="#f3fff3" />
+        <meta name="theme-color" content="#020" />
         <meta name="referrer" content="no-referrer" />
         <meta name="description" content="stypr network &middot; network.stypr.com" />
         <meta name="twitter:title" content="AS400671" />
