fix: z-index fixes on services

--- a/about.html
+++ b/about.html
@@ -146,9 +146,9 @@
 
                                     The entire network infrastructure and dashboard system are operated, maintained, and managed by stypr. Please note that the network is kept on a best-effort basis, and it is likely that resolving any
                                     issue may take up to 72 hours.<br />
-                                    <br />
                                 </h6>
-
+                            </div>
+                            <div class="my-3 mb-1 px-4 p-3 bg-body shadow-sm">
                                 <h4>Peering Policy</h4>
                                 <br />
                                 <h6>
